WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
179824
AX: [GTK] Regression: accessibility/gtk/aria-keyshortcuts.html fails after
r224953
https://bugs.webkit.org/show_bug.cgi?id=179824
Summary
AX: [GTK] Regression: accessibility/gtk/aria-keyshortcuts.html fails after r2...
Joanmarie Diggs
Reported
2017-11-17 09:11:49 PST
accessibility/gtk/aria-keyshortcuts.html fails after
r224953
Attachments
Patch
(1.82 KB, patch)
2017-11-17 09:18 PST
,
Joanmarie Diggs
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2017-11-17 09:12:25 PST
<
rdar://problem/35616139
>
Joanmarie Diggs
Comment 2
2017-11-17 09:18:55 PST
Created
attachment 327183
[details]
Patch
Nan Wang
Comment 3
2017-11-17 09:26:03 PST
How would I miss that. Thanks for the fix!
WebKit Commit Bot
Comment 4
2017-11-17 10:27:32 PST
Comment on
attachment 327183
[details]
Patch Clearing flags on attachment: 327183 Committed
r224970
: <
https://trac.webkit.org/changeset/224970
>
WebKit Commit Bot
Comment 5
2017-11-17 10:27:34 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug